less/default.less
@import "mixins";
@import "../bootstrap/less/bootstrap";

body {
	padding:0px;
	margin:0px;
	background-color:#f5b128;
}

a {
	color:#FE6;
	padding-left:2px;
	padding-right:2px;
	margin-left:-2px;
	margin-right:-2px;
	white-space:nowrap;
	&:hover {
		color:#FF0;
		text-decoration:none;
		background-color:rgba(0,0,0,0.1);
	}
}

#navigation {
	position:fixed;
	width:100%;
	display:none;
	bottom:-2px;
	z-index:10;
	#linkBar {
		padding:12px 10px 12px 10px;
		background-color:rgba(255,255,255,0.2);
		font-size:1.3em;
		font-family: 'PT Sans Narrow', sans-serif;
		font-weight:normal;
		.rounded-corners(2px);
		.noSelection();
		.box-shadow(0px, 0px, 3px, rgba(0,0,0,0.4);
	}
	a {
		color:#FFF;
		margin:0 10px;
		text-decoration:none;
		background-color:transparent;
		.text-shadow(0, -1px, 0, rgba(0,0,0,0.4));
		&:hover {
			border-bottom:1px solid #FFF
		}
		i {
			vertical-align:-1px;
		}
	}
	&:hover {
	}
}

.slide {
	position:absolute;
	left:0px;
	.text-shadow(0, -1px, 0px, rgba(0,0,0,0.4));
	.content {
		z-index:6;
		margin-top:60px;
		color:rgba(255,255,255,0.95);
		h1 {
			font-size:3em;
			font-family: 'PT Sans Narrow', sans-serif;
			font-weight:bold;
			margin-bottom:20px;
		}
		p {
			font-size:1.5em;
			line-height:1.6em;
			font-family: 'Vollkorn', serif;
			font-weight:normal;
			margin:10px 0px;
		}
		table {
					font-size:1.5em;
					line-height:1.6em;
					font-family: 'Vollkorn', serif;
					font-weight:normal;
					margin:10px 0px;
					td {
						padding:3px 10px;
						text-align:right;
						vertical-align:top;
					}
					td + td {
						text-align:left;
					}
					i {
						vertical-align:-1px;
					}
					
			}
			ul {
				list-style:none;
				font-size:1.5em;
				line-height:1.6em;
				font-family: 'Vollkorn', serif;
				font-weight:normal;
				margin:8px 0px;
				a {
					display:block;
					background-color:transparent;
					padding:9px 8px 7px;
					color:#FFF;
					.rounded-corners(5px);
					i {
						vertical-align:-1px;
					}
					&:hover {
						color:#FF0;
						background-color:rgba(0,0,0,0.1);
					}
				}
			}
	}
	.stripe {
		z-index:-4;
		position:absolute;
		height:100%;
		top:0px;
	}
	.bar {
		position:absolute;
		bottom:0px;
		width:100%;
		background-color:rgba(255,255,255,0.5);
	}
}

.slide:before {
	z-index:-2;
	content: "";
	position:absolute;
	left:0px;
	top:0px;
	display:block;
	width:100%;
	height:100%;
	.gradient(rgba(0,0,0,0),rgba(0,0,0,0.1));
}

.slide:after {
	content: "";
	z-index:-3;
	position:absolute;
	left:0px;
	top:0px;
	display:block;
	width:100%;
	height:100%;
	background:transparent url('../img/noiseOverlay.png') repeat top left;
  .retina {
    .backgroundSize(200px, 279/2px);
  }
}

#twitter {
	position:relative;
	display:block;
	white-space:normal;
	#tweet {
		.opacityForAll(70);
		display:block;
		position:absolute;
		bottom:20px;
		right:0px;
		width:100%;
		height:90px;
		#speachBubble {
			position:absolute;
			background-color:#FFF;
			border-color:#FFF;
			padding:10px;
			margin-bottom:30px;
			top:0px;
			bottom:0px;
			width:100%;
			right:0px;
			display:block;
			.rounded-corners(8px);
			#lasttweet {
				font-size:0.8em;
				display:block;
				height:70px;
				line-height:1.3em;
				color:#000;
				height:100%;
				overflow:hidden;
				.text-shadow(0px, 0px, 0px, rgba(0,0,0,0.3));
			}
			&:after {
			   content: "";
			   position: absolute;
			   top: 100%;
			   right: 165px;
			   border-top: 15px solid black;
			   border-top-color: inherit;
			   border-left: 15px solid transparent;
			   border-right: 15px solid transparent;
			}
		}
	}
	&:hover #tweet {
		height:150px;
		width:140%;	
		.opacityForAll(90);
	}
}




// POPOVERS
// --------

.popover-inner {
  .box-shadow(0 7px 0px rgba(0,0,0,0.1));
}
.popover-title {
  padding: 16px 14px 5px 14px;
  font-size:1.4em;
  color:#333;
  background-color: #FFF;
  border-bottom:0px solid #eee;
}
.popover-content {
  padding: 7px 14px 14px 14px;
  background-color: #FFF;
  .background-clip(padding-box);
  p, ul, ol {
	font-size:1.2em;
	line-height:1.5em;
	color:#666;
	font-family: 'Vollkorn', serif;
  }
}

